--- a/styles/styles.css
+++ b/styles/styles.css
@@ -362,15 +362,14 @@ h6 {
   background-image: url("../img/landing.jpg");
   background-size: cover;
   background-position-x: 50%;
-}
-.landing.landing_mobile {
   padding: 16px 24px;
   height: 568px;
 }
-.landing.landing_desktop {
-  padding: 40px 60px;
-  height: 720px;
-  display: none;
+@media (min-width: 1280px) {
+  .landing {
+    padding: 40px 60px;
+    height: 720px;
+  }
 }
 
 .header {
@@ -380,65 +379,121 @@ h6 {
   justify-content: space-between;
   position: relative;
 }
-.header.header_mobile .header-mobile__hamgurger {
+.header__hamgurger {
   display: flex;
 }
-.header.header_desktop .header__nav-menu {
-  width: 640px;
-  position: absolute;
-  left: 23%;
+@media (min-width: 1280px) {
+  .header__hamgurger {
+    display: none;
+  }
+}
+.header__nav-menu {
+  display: none;
+}
+@media (min-width: 1280px) {
+  .header__nav-menu {
+    display: flex;
+    width: 640px;
+    position: absolute;
+    left: 23%;
+  }
+}
+.header__action-button {
+  display: none;
+}
+@media (min-width: 1280px) {
+  .header__action-button {
+    display: flex;
+  }
+}
+
+.logo__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.logo__title {
+  line-height: 15px;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 11px;
+  letter-spacing: 1.1px;
+}
+@media (min-width: 1280px) {
+  .logo__title {
+    font-size: 13px;
+    letter-spacing: 1.3px;
+  }
+}
+.logo svg {
+  width: 37px;
+  height: 29px;
+}
+@media (min-width: 1280px) {
+  .logo svg {
+    width: 62.16px;
+    height: 48px;
+  }
 }
 
 .action-block {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.action-block.action-block_mobile {
   margin-top: 60px;
 }
-.action-block.action-block_mobile .action-block__title {
+.action-block__single-title {
   margin-bottom: 46px;
 }
-.action-block.action-block_desktop {
-  margin-top: 83px;
+@media (min-width: 1280px) {
+  .action-block__single-title {
+    display: none;
+  }
 }
-.action-block.action-block_desktop .action-block__titles {
-  margin-bottom: 91px;
+.action-block__title-from-titles {
+  margin-bottom: 13px;
 }
-.action-block.action-block_desktop .action-block__titles .action-block__subtitle {
-  margin-top: 13px;
+@media (min-width: 1280px) {
+  .action-block__single-action-button {
+    display: none;
+  }
 }
-.action-block.action-block_desktop .action-block__action-buttons {
-  display: flex;
-  width: 381px;
-  justify-content: space-between;
+.action-block__titles {
+  display: none;
+}
+@media (min-width: 1280px) {
+  .action-block__titles {
+    display: block;
+    margin-bottom: 91px;
+  }
+}
+.action-block__action-buttons {
+  display: none;
+}
+@media (min-width: 1280px) {
+  .action-block__action-buttons {
+    display: flex;
+    width: 381px;
+    justify-content: space-between;
+  }
 }
 
 .title {
   text-align: center;
   color: rgba(0, 0, 0, 0.84);
-}
-.title .title__and-sign {
-  color: rgba(53, 36, 88, 0.84);
-  font-size: inherit;
-  letter-spacing: inherit;
-}
-.title.title_mobile {
   font-size: 24px;
   letter-spacing: 2.4px;
 }
-.title.title_desktop {
-  font-size: 48px;
-  letter-spacing: 4.8px;
+@media (min-width: 1280px) {
+  .title {
+    font-size: 48px;
+    letter-spacing: 4.8px;
+  }
 }
-
-.subtitle {
-  text-align: center;
-}
-.subtitle.subtitle_desktop {
-  font-size: 23px;
-  letter-spacing: 1.495px;
+.title__and-sign {
+  color: rgba(53, 36, 88, 0.84);
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
 .action-button {
@@ -447,7 +502,7 @@ h6 {
   height: 50px;
   padding: 3px;
 }
-.action-button .action-button__content {
+.action-button__content {
   font-family: "Open Sans", sans-serif;
   width: 100%;
   height: 100%;
@@ -456,51 +511,34 @@ h6 {
   justify-content: center;
   color: rgba(0, 0, 0, 0.38);
 }
-.action-button .action-button__content.action-button__content_black {
-  color: #000;
-}
-.action-button:hover .action-button__content {
+.action-button__content:hover {
   background-color: #8e9993;
   color: rgba(255, 255, 255, 0.63);
 }
-.action-button:hover .action-button__content.action-button__content_black {
-  color: #000;
-}
-.action-button:active .action-button__content {
+.action-button__content:active {
   background-color: #626865;
   color: rgba(255, 255, 255, 0.57);
 }
-.action-button:active .action-button__content.action-button__content_black {
+.action-button__content_black {
+  color: #000;
+}
+.action-button__content_black:hover {
+  color: #000;
+}
+.action-button__content_black:active {
   color: #000;
 }
 
-.logo .logo__link {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.logo .logo__title {
-  font-size: 11px;
-  line-height: 15px;
-  color: rgba(0, 0, 0, 0.84);
-}
-.logo.logo_mobile .logo__title {
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 11px;
-  letter-spacing: 1.1px;
-}
-.logo.logo_desktop .logo__title {
-  font-size: 13px;
-  letter-spacing: 1.3px;
-  color: rgba(0, 0, 0, 0.8);
+.subtitle {
+  text-align: center;
+  font-size: 23px;
+  letter-spacing: 1.495px;
 }
 
 .nav-menu {
-  display: flex;
   justify-content: space-between;
 }
-.nav-menu .nav-menu__item {
+.nav-menu__item {
   font-family: "Open Sans", sans-serif;
 }
 
@@ -1244,19 +1282,5 @@ h6 {
     padding: 0px;
     text-align: center;
     background-color: transparent;
-  }
-}
-@media (min-width: 1280px) {
-  .wrapper .landing_mobile {
-    display: none;
-  }
-  .wrapper .landing_desktop {
-    display: flex;
-  }
-  .wrapper .services-and-video_mobile {
-    display: none;
-  }
-  .wrapper .services-and-video_desktop {
-    display: flex;
   }
 }/*# sourceMappingURL=styles.css.map */
