--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -343,16 +343,12 @@ h6 {
 	background-image: url('../img/landing.jpg');
 	background-size: cover;
 	background-position-x: 50%;
+	padding: 16px 24px;
+	height: 568px;
 
-	&.landing_mobile {
-		padding: 16px 24px;
-		height: 568px;
-	}
-
-	&.landing_desktop {
+	@media (min-width: 1280px) {
 		padding: 40px 60px;
 		height: 720px;
-		display: none;
 	}
 }
 
@@ -363,17 +359,61 @@ h6 {
 	justify-content: space-between;
 	position: relative;
 
-	&.header_mobile {
-		.header-mobile__hamgurger {
-			display: flex;
+	&__hamgurger {
+		display: flex;
+
+		@media (min-width: 1280px) {
+			display: none;
 		}
 	}
 
-	&.header_desktop {
-		.header__nav-menu {
+	&__nav-menu {
+		display: none;
+
+		@media (min-width: 1280px) {
+			display: flex;
 			width: 640px;
 			position: absolute;
 			left: 23%;
+		}
+	}
+
+	&__action-button {
+		display: none;
+
+		@media (min-width: 1280px) {
+			display: flex;
+		}
+	}
+}
+
+.logo {
+	&__link {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__title {
+		line-height: 15px;
+		color: rgba(0, 0, 0, 0.8);
+		font-size: 11px;
+		letter-spacing: 1.1px;
+
+		@media (min-width: 1280px) {
+			font-size: 13px;
+			letter-spacing: 1.3px;
+		}
+	}
+
+	svg {
+		width: 37px;
+		height: 29px;
+
+		@media (min-width: 1280px) {
+			width: 62.16px;
+			height: 48px;
 		}
 	}
 }
@@ -382,27 +422,39 @@ h6 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 60px;
 
-	&.action-block_mobile {
-		margin-top: 60px;
+	&__single-title {
+		margin-bottom: 46px;
 
-		.action-block__title {
-			margin-bottom: 46px;
+		@media (min-width: 1280px) {
+			display: none;
 		}
 	}
 
-	&.action-block_desktop {
-		margin-top: 83px;
+	&__title-from-titles {
+		margin-bottom: 13px;
+	}
 
-		.action-block__titles {
-			margin-bottom: 91px;
-
-			.action-block__subtitle {
-				margin-top: 13px;
-			}
+	&__single-action-button {
+		@media (min-width: 1280px) {
+			display: none;
 		}
+	}
 
-		.action-block__action-buttons {
+	&__titles {
+		display: none;
+
+		@media (min-width: 1280px) {
+			display: block;
+			margin-bottom: 91px;
+		}
+	}
+
+	&__action-buttons {
+		display: none;
+
+		@media (min-width: 1280px) {
 			display: flex;
 			width: 381px;
 			justify-content: space-between;
@@ -413,30 +465,18 @@ h6 {
 .title {
 	text-align: center;
 	color: rgba(0, 0, 0, 0.84);
+	font-size: 24px;
+	letter-spacing: 2.4px;
 
-	.title__and-sign {
-		color: rgba(53, 36, 88, 0.84);
-		font-size: inherit;
-		letter-spacing: inherit;
-	}
-
-	&.title_mobile {
-		font-size: 24px;
-		letter-spacing: 2.4px;
-	}
-
-	&.title_desktop {
+	@media (min-width: 1280px) {
 		font-size: 48px;
 		letter-spacing: 4.8px;
 	}
-}
 
-.subtitle {
-	text-align: center;
-
-	&.subtitle_desktop {
-		font-size: 23px;
-		letter-spacing: 1.495px;
+	&__and-sign {
+		color: rgba(53, 36, 88, 0.84);
+		font-size: inherit;
+		letter-spacing: inherit;
 	}
 }
 
@@ -446,7 +486,7 @@ h6 {
 	height: 50px;
 	padding: 3px;
 
-	.action-button__content {
+	&__content {
 		font-family: $open-sans;
 		width: 100%;
 		height: 100%;
@@ -455,70 +495,40 @@ h6 {
 		justify-content: center;
 		color: rgba(0, 0, 0, 0.38);
 
-		&.action-button__content_black {
+		&:hover {
+			background-color: #8e9993;
+			color: rgba(255, 255, 255, 0.63);
+		}
+
+		&:active {
+			background-color: #626865;
+			color: rgba(255, 255, 255, 0.57);
+		}
+	}
+
+	&__content_black {
+		color: #000;
+
+		&:hover {
+			color: #000;
+		}
+
+		&:active {
 			color: #000;
 		}
 	}
-
-	&:hover {
-		.action-button__content {
-			background-color: #8e9993;
-			color: rgba(255, 255, 255, 0.63);
-
-			&.action-button__content_black {
-				color: #000;
-			}
-		}
-	}
-
-	&:active {
-		.action-button__content {
-			background-color: #626865;
-			color: rgba(255, 255, 255, 0.57);
-
-			&.action-button__content_black {
-				color: #000;
-			}
-		}
-	}
 }
 
-.logo {
-	.logo__link {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.logo__title {
-		font-size: 11px;
-		line-height: 15px;
-		color: rgba(0, 0, 0, 0.84);
-	}
-
-	&.logo_mobile {
-		.logo__title {
-			color: rgba(0, 0, 0, 0.8);
-			font-size: 11px;
-			letter-spacing: 1.1px;
-		}
-	}
-
-	&.logo_desktop {
-		.logo__title {
-			font-size: 13px;
-			letter-spacing: 1.3px;
-			color: rgba(0, 0, 0, 0.8);
-		}
-	}
+.subtitle {
+	text-align: center;
+	font-size: 23px;
+	letter-spacing: 1.495px;
 }
 
 .nav-menu {
-	display: flex;
 	justify-content: space-between;
 
-	.nav-menu__item {
+	&__item {
 		font-family: $open-sans;
 	}
 }
@@ -1360,26 +1370,6 @@ h6 {
 			padding: 0px;
 			text-align: center;
 			background-color: transparent;
-		}
-	}
-}
-
-@media (min-width: 1280px) {
-	.wrapper {
-		.landing_mobile {
-			display: none;
-		}
-
-		.landing_desktop {
-			display: flex;
-		}
-
-		.services-and-video_mobile {
-			display: none;
-		}
-
-		.services-and-video_desktop {
-			display: flex;
 		}
 	}
 }
