--- a/styles/action-button/action-button.module.scss
+++ b/styles/action-button/action-button.module.scss
@@ -1,4 +1,5 @@
 .action-button {
+	$self: &;
 	border: 1px solid #8e9993;
 	width: 175px;
 	height: 50px;
@@ -11,28 +12,37 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		color: rgba(0, 0, 0, 0.38);
 
 		&:hover {
 			background-color: #8e9993;
-			color: rgba(255, 255, 255, 0.63);
 		}
 
 		&:active {
 			background-color: #626865;
-			color: rgba(255, 255, 255, 0.57);
-		}
-	}
-
-	&__content_black {
-		color: #000;
-
-		&:hover {
-			color: #000;
 		}
 
-		&:active {
+		#{ $self }--text_light & {
+			color: rgba(0, 0, 0, 0.38);
+
+			&:hover {
+				color: rgba(255, 255, 255, 0.63);
+			}
+
+			&:active {
+				color: rgba(255, 255, 255, 0.57);
+			}
+		}
+
+		#{ $self }--text_black & {
 			color: #000;
+
+			&:hover {
+				color: #000;
+			}
+
+			&:active {
+				color: #000;
+			}
 		}
 	}
 }
