--- a/styles/info-card/info-card.module.scss
+++ b/styles/info-card/info-card.module.scss
@@ -1,7 +1,21 @@
 .info-card {
+	$self: &;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	&--font-size_12-22 {
+		#{ $self }__title,
+		#{ $self }__details {
+			font-size: 12px;
+			letter-spacing: 1.2px;
+
+			@media (min-width: 1280px) {
+				font-size: 22px;
+				letter-spacing: 2.2px;
+			}
+		}
+	}
 
 	&__pic {
 		display: flex;
@@ -16,12 +30,8 @@
 		font-family: $open-sans;
 		font-weight: 700;
 		text-align: center;
-		font-size: 12px;
-		letter-spacing: 1.2px;
 
 		@media (min-width: 1280px) {
-			font-size: 22px;
-			letter-spacing: 2.2px;
 			margin-bottom: 30px;
 		}
 	}
@@ -29,13 +39,9 @@
 	&__details {
 		font-family: $open-sans;
 		text-align: center;
-		font-size: 12px;
-		letter-spacing: 1.2px;
 		display: flex;
 
 		@media (min-width: 1280px) {
-			font-size: 22px;
-			letter-spacing: 2.2px;
 			flex-direction: column;
 			align-items: center;
 		}
