--- a/styles/components/action-button/action-button.module.scss
+++ b/styles/components/action-button/action-button.module.scss
@@ -1,9 +1,23 @@
+@use '../../common/extends/--buttons.scss';
+
 .action-button {
 	$self: &;
 	border: 1px solid #8e9993;
 	width: 175px;
 	height: 50px;
 	padding: 3px;
+
+	&--button-text_light {
+		#{ $self }__content {
+			@extend %--button-text_light;
+		}
+	}
+
+	&--button-text_black {
+		#{ $self }__content {
+			@extend %--button-text_black;
+		}
+	}
 
 	&__content {
 		font-family: $open-sans;
@@ -19,30 +33,6 @@
 
 		&:active {
 			background-color: #626865;
-		}
-
-		#{ $self }--text_light & {
-			color: rgba(0, 0, 0, 0.38);
-
-			&:hover {
-				color: rgba(255, 255, 255, 0.63);
-			}
-
-			&:active {
-				color: rgba(255, 255, 255, 0.57);
-			}
-		}
-
-		#{ $self }--text_black & {
-			color: #000;
-
-			&:hover {
-				color: #000;
-			}
-
-			&:active {
-				color: #000;
-			}
 		}
 	}
 }
