--- a/styles/components/menu/menu.module.scss
+++ b/styles/components/menu/menu.module.scss
@@ -1,3 +1,5 @@
+@use '../../common/extends/--fonts.scss';
+
 .menu {
 	width: 100%;
 	display: flex;
@@ -48,25 +50,18 @@
 	}
 
 	&__title {
-		font-size: 22px;
-		letter-spacing: 2.2px;
+		@extend %--font-size_22-48;
+		@extend %--letter-spacing_22-48;
 		width: 174px;
 
 		@media (min-width: 1280px) {
-			font-size: 48px;
-			letter-spacing: 4.8px;
 			width: 100%;
 		}
 	}
 
 	&__subtitle {
-		font-size: 18px;
-		letter-spacing: 1.8px;
-
-		@media (min-width: 1280px) {
-			font-size: 30px;
-			letter-spacing: 3px;
-		}
+		@extend %--font-size_18-30;
+		@extend %--letter-spacing_18-3;
 	}
 
 	&__dots-selector {
