--- a/styles/components/message-form/message-form.module.scss
+++ b/styles/components/message-form/message-form.module.scss
@@ -1,16 +1,16 @@
+@use '../../common/extends/--fonts.scss';
+
 .message-form {
 	display: flex;
 	flex-direction: column;
 
 	&__label {
-		font-size: 12px;
-		letter-spacing: 0.48px;
+		@extend %--font-size_12-16;
+		@extend %--letter-spacing_048-064;
 		margin-bottom: 3px;
 		margin-top: 8px;
 
 		@media (min-width: 1280px) {
-			font-size: 16px;
-			letter-spacing: 0.64px;
 			margin-bottom: 7px;
 			margin-top: 21px;
 		}
@@ -21,17 +21,15 @@
 	}
 
 	&__input {
+		@extend %--font-size_10-14;
+		@extend %--letter-spacing_04-056;
 		border: 1px solid #8e9993;
 		background: #fff;
 		color: rgba(0, 0, 0, 0.51);
 		font-family: $prata;
-		font-size: 10px;
-		letter-spacing: 0.4px;
 		padding: 6px;
 
 		@media (min-width: 1280px) {
-			font-size: 14px;
-			letter-spacing: 0.56px;
 			padding: 10px;
 			height: 41px;
 		}
@@ -64,13 +62,13 @@
 	}
 
 	&__submit {
+		@extend %--font-size_14-16;
+		@extend %--letter-spacing_056-064;
 		cursor: pointer;
 		background-color: #6a7571;
 		border: none;
 		color: #fff;
 		font-family: $prata;
-		font-size: 14px;
-		letter-spacing: 0.56px;
 		margin-top: 25px;
 		padding: 6px;
 		line-height: 17px;
@@ -78,8 +76,6 @@
 		@media (min-width: 1280px) {
 			width: 50%;
 			align-self: flex-end;
-			font-size: 16px;
-			letter-spacing: 0.64px;
 			height: 56px;
 			margin-top: 38px;
 		}
