--- a/styles/components/message/message.module.scss
+++ b/styles/components/message/message.module.scss
@@ -1,3 +1,5 @@
+@use '../../common/extends/--fonts.scss';
+
 .message {
 	width: 100%;
 	display: flex;
@@ -22,13 +24,11 @@
 	}
 
 	&__title {
+		@extend %--font-size_10-16;
+		@extend %--letter-spacing_04-064;
 		text-align: center;
-		font-size: 10px;
-		letter-spacing: 0.4px;
 
 		@media (min-width: 1280px) {
-			font-size: 16px;
-			letter-spacing: 0.64px;
 			padding: 0px 30px 20px;
 		}
 	}
