--- a/styles/components/product-card/product-card.module.scss
+++ b/styles/components/product-card/product-card.module.scss
@@ -1,3 +1,5 @@
+@use '../../common/extends/--fonts.scss';
+
 .product-card {
 	display: flex;
 	flex-direction: column;
@@ -40,14 +42,9 @@
 	}
 
 	&__title {
+		@extend %--font-size_16-23;
+		@extend %--letter-spacing_104-1495;
 		text-align: center;
-		font-size: 16px;
-		letter-spacing: 1.04px;
-
-		@media (min-width: 1280px) {
-			font-size: 23px;
-			letter-spacing: 1.495px;
-		}
 	}
 
 	&__decoration-pic {
@@ -56,14 +53,12 @@
 	}
 
 	&__description {
+		@extend %--font-size_14-15;
+		@extend %--letter-spacing_14-15;
 		text-align: center;
-		font-size: 14px;
-		letter-spacing: 1.4px;
 
 		@media (min-width: 1280px) {
 			max-width: 292px;
-			font-size: 15px;
-			letter-spacing: 1.5px;
 		}
 	}
 }
