--- a/styles/components/title/title.module.scss
+++ b/styles/components/title/title.module.scss
@@ -1,13 +1,10 @@
+@use '../../common/extends/--fonts.scss';
+
 .title {
+	@extend %--font-size_24-48;
+	@extend %--letter-spacing_24-48;
 	text-align: center;
 	color: rgba(0, 0, 0, 0.84);
-	font-size: 24px;
-	letter-spacing: 2.4px;
-
-	@media (min-width: 1280px) {
-		font-size: 48px;
-		letter-spacing: 4.8px;
-	}
 
 	&__and-sign {
 		color: rgba(53, 36, 88, 0.84);
