--- a/styles/common/modifiers/fonts.scss
+++ b/styles/common/modifiers/fonts.scss
@@ -1,4 +1,4 @@
-%--font-size {
+.font-size {
 	&_10-14 {
 		font-size: 10px;
 		@media (min-width: 1280px) {
@@ -126,7 +126,7 @@
 	}
 }
 
-%--letter-spacing {
+.letter-spacing {
 	&_04-056 {
 		letter-spacing: 0.4px;
 		@media (min-width: 1280px) {
