--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,6 +2,7 @@
 //
 @import './common/variables.scss';
 @import './common/reset.scss';
+@import './common/modifiers/fonts.scss';
 //
 @import './components/action-block/action-block.module.scss';
 @import './components/action-button/action-button.module.scss';
