dots selector buttons restyled

--- a/styles/components/dots-selector/dots-selector.module.scss
+++ b/styles/components/dots-selector/dots-selector.module.scss
@@ -19,7 +19,15 @@
 
 		&[option][selected] {
 			outline: none;
-			background-color: #6a7571;
+			background-color: #808885;
+		}
+
+		&:has(+ .dots-selector__dot-button[selected]) {
+			background-color: #a2a2a2;
+		}
+
+		&[option][selected] + .dots-selector__dot-button {
+			background-color: #a2a2a2;
 		}
 	}
 }
