--- a/styles/components/dots-selector/dots-selector.module.css
+++ b/styles/components/dots-selector/dots-selector.module.css
@@ -17,5 +17,11 @@
 }
 .dots-selector__dot-button[option][selected] {
   outline: none;
-  background-color: #6a7571;
+  background-color: #808885;
+}
+.dots-selector__dot-button:has(+ .dots-selector__dot-button[selected]) {
+  background-color: #a2a2a2;
+}
+.dots-selector__dot-button[option][selected] + .dots-selector__dot-button {
+  background-color: #a2a2a2;
 }/*# sourceMappingURL=dots-selector.module.css.map */
